[package]
name = "windows_api_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0"

[dependencies.windows]
version = "*"
features = ["Devices_WiFi", "Networking_Connectivity", "Win32_NetworkManagement_WiFi", "Foundation_Collections",
    "Foundation", "Media_SpeechRecognition", "Media_Audio", "Win32_Foundation", "Win32_Media_Audio", "Win32_System_Com",
    "Globalization", "Devices_Geolocation", "Win32_Media_Audio_Endpoints","Networking_NetworkOperators",
"Win32_System_Power"]
