[package]
name = "windows_api_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0"
cpal = "0.15"
ringbuffer = "0"
hound = "3.5"
rustfft = "6.1"

[dependencies.windows]
version = "0.61"
features = ["Devices_WiFi", "Win32_NetworkManagement_WiFi", "Foundation_Collections", "Foundation", "Media_SpeechRecognition",
    "Media_Audio", "Win32_Foundation", "Win32_Media_Audio", "Win32_System_Com", "Globalization", "Devices_Geolocation",
    "Win32_Media_Audio_Endpoints", "Win32_System_Power", "Win32_Networking_WinSock", "Media_SpeechSynthesis",
    "Win32_Media_Speech",
    "Win32_System_Com",
    "Win32_Foundation",
    "Media_SpeechSynthesis",
    "Media_Core",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
    "Media_Playback",
    "Storage",
    "Media_MediaProperties",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant"
]


[[bin]]
name = "windows_api_rust_sample"
path = "src/main.rs"

[[bin]]
name = "onnx_sample"
path = "src/onnx_main.rs"

[[bin]]
name = "uds_client_example"
path = "src/uds.rs"

[[bin]]
name = "say_example"
path = "src/say.rs"
